--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="left">
       <div class="home bg-grey rounded m-1 p-1">
         <div class="logo">
-          <img src="/images/logo.svg" alt="" class="invert" />
+          <img src="/images/logo.svg" width="90" alt="" class="invert" />
         </div>
         <ul>
           <li>
@@ -120,19 +120,123 @@
             <p>Hits to boost your mind fill you with happiness</p>
           </div>
 
+
+
+
+
+
+          <div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div><div class="card">
+            <div class="play">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
+                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <img src="/images/happyhits.jpeg" alt="" />
+            <h2>Happy Hits!</h2>
+            <p>Hits to boost your mind fill you with happiness</p>
+          </div>
+
         </div>
         <div class="playbar">
-          <div class="songinfo">
+          <div class="seekbar">
+            <div class="circle">
 
+            </div>
           </div>
-          <div class="songbtns">
-            <img src="/images/prevsong.svg" alt="">
-            <img src="/images/play.svg" alt="">
-            <img src="/images/nextsong.svg" alt="">
-          </div>
+          <div class="abovebar">
+            <div class="songinfo">
 
-          <div class="songtime">
+            </div>
+            <div class="songbtns">
+              <img id="prev" src="/images/prevsong.svg" alt="">
+              <img id="play" src="/images/play.svg" alt="">
+              <img id="next" src="/images/nextsong.svg" alt="">
+            </div>
 
+            <div class="songtime">
+
+            </div>
           </div>
         </div>
       </div>
