just finish making the hamburger menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <!-- <img src="images/logo.svg" alt=""> -->
   <div class="container flex bg-black">
     <div class="left">
+      <div class="close">
+        <img width="30" class="invert close1" src="/images/close.svg" alt="">
+      </div>
       <div class="home bg-grey rounded m-1 p-1">
         <div class="logo">
           <img src="/images/logo.svg" width="90" alt="" class="invert" />
@@ -78,16 +81,19 @@
     <div class="right bg-grey rounded">
       <div class="header">
         <div class="nav">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
-              stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M9 18L14.2929 12.7071C14.6262 12.3738 14.7929 12.2071 14.7929 12C14.7929 11.7929 14.6262 11.6262 14.2929 11.2929L9 6"
-              stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
+          <div class="flex">
+            <img class="invert hamburger" src="/images/hamburger.svg" alt="">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
+                stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M9 18L14.2929 12.7071C14.6262 12.3738 14.7929 12.2071 14.7929 12C14.7929 11.7929 14.6262 11.6262 14.2929 11.2929L9 6"
+                stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
         </div>
         <div class="buttons">
           <button class="signupbtn">Sign up</button>
@@ -134,7 +140,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -143,7 +150,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -152,7 +160,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -161,7 +170,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -170,7 +180,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -179,7 +190,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -188,7 +200,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -197,7 +210,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
@@ -206,7 +220,8 @@
             <img src="/images/happyhits.jpeg" alt="" />
             <h2>Happy Hits!</h2>
             <p>Hits to boost your mind fill you with happiness</p>
-          </div><div class="card">
+          </div>
+          <div class="card">
             <div class="play">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
                 <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
