Finish some responsiveness of the site

--- a/index.html
+++ b/index.html
@@ -126,112 +126,6 @@
             <p>Hits to boost your mind fill you with happiness</p>
           </div>
 
-
-
-
-
-
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-
         </div>
         <div class="playbar">
           <div class="seekbar">
@@ -244,7 +138,7 @@
 
             </div>
             <div class="songbtns">
-              <img id="prev" src="/images/prevsong.svg" alt="">
+              <img id="prev" width="32" src="/images/prevsong.svg" alt="">
               <img id="play" src="/images/play.svg" alt="">
               <img id="next" src="/images/nextsong.svg" alt="">
             </div>
