Finish adding the volume button and its functionality

--- a/index.html
+++ b/index.html
@@ -139,13 +139,20 @@
             </div>
             <div class="songbtns">
               <img id="prev" width="32" src="/images/prevsong.svg" alt="">
-              <img id="play" src="/images/play.svg" alt="">
-              <img id="next" src="/images/nextsong.svg" alt="">
+              <img id="play" width="32" src="/images/play.svg" alt="">
+              <img id="next" width="32" src="/images/nextsong.svg" alt="">
             </div>
 
-            <div class="songtime">
-
+            <div class="timevol">
+              <div class="songtime"></div>
+              <div class="volume">
+                <img src="/images/volume.svg" alt="" width="25">
+                <div class="range">
+                  <input type="range" name="volume" id="range">
+                </div>
+              </div>
             </div>
+
           </div>
         </div>
       </div>
