finish making the spotify clone with extra features

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </li>
         </ul>
       </div>
-      <div class="library bg-grey rounded p-1">
+      <div class="library bg-grey rounded m-1 p-1">
         <div class="heading">
           <img src="/images/playlist.svg" alt="" class="invert" />
 
@@ -43,17 +43,7 @@
         </div>
         <div class="songlist">
           <ul>
-            <li>
-              <img src="/images/music.svg" class="invert" alt="">
-              <div class="info">
-                <div>Song name</div>
-                <div>Song Artist</div>
-              </div>
-              <div class="playnow">
-                <span>Play Now</span>
-                <img src="/images/play.svg" class="invert" alt="">
-              </div>
-            </li>
+           
           </ul>
         </div>
         <div class="footer">
@@ -104,28 +94,7 @@
       <div class="spotifyPplaylist">
         <h1>Spotify Playlist</h1>
         <div class="cardContainer">
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-
-          <div class="card">
-            <div class="play">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="#000" xmlns="https://www.w3.org/2000/svg">
-                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" stroke-width="1.5" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <img src="/images/happyhits.jpeg" alt="" />
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mind fill you with happiness</p>
-          </div>
-
+         
         </div>
         <div class="playbar">
           <div class="seekbar">
@@ -138,9 +107,9 @@
 
             </div>
             <div class="songbtns">
-              <img id="prev" width="32" src="/images/prevsong.svg" alt="">
-              <img id="play" width="32" src="/images/play.svg" alt="">
-              <img id="next" width="32" src="/images/nextsong.svg" alt="">
+              <img id="prev" width="25" src="/images/prevsong.svg" alt="">
+              <img id="play" width="25" src="/images/play.svg" alt="">
+              <img id="next" width="25" src="/images/nextsong.svg" alt="">
             </div>
 
             <div class="timevol">
